--- a/Lessons/Lesson2/Task1/package.json
+++ b/Lessons/Lesson2/Task1/package.json
@@ -12,6 +12,10 @@
     "license": "ISC",
     "devDependencies": {
         "@babel/cli": "^7.10.4",
-        "@babel/core": "^7.10.4"
-    }
+        "@babel/core": "^7.10.4",
+        "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
+        "@babel/plugin-transform-arrow-functions": "^7.10.4",
+        "@babel/plugin-transform-template-literals": "^7.10.4"
+    },
+    "dependencies": {}
 }
