--- a/Lessons/Lesson2/Task1/.babelrc
+++ b/Lessons/Lesson2/Task1/.babelrc
@@ -4,4 +4,7 @@
         "@babel/plugin-transform-arrow-functions",
         "@babel/plugin-transform-template-literals"
     ]
+    // "preset":[
+    //     "@babel/preset-env"
+    // ]
 }
