--- a/Lessons/Lesson2/Task1/package.json
+++ b/Lessons/Lesson2/Task1/package.json
@@ -17,5 +17,7 @@
         "@babel/plugin-transform-arrow-functions": "^7.10.4",
         "@babel/plugin-transform-template-literals": "^7.10.4"
     },
-    "dependencies": {}
+    "dependencies": {
+        "@babel/preset-env": "^7.10.4"
+    }
 }
