--- a/Lessons/Lesson2/Task1/.babelrc
+++ b/Lessons/Lesson2/Task1/.babelrc
@@ -1,10 +1,10 @@
 {
-    "plugins":[
-        "@babel/plugin-proposal-object-rest-spread",
-        "@babel/plugin-transform-arrow-functions",
-        "@babel/plugin-transform-template-literals"
-    ]
-    // "preset":[
-    //     "@babel/preset-env"
+    // "plugins":[
+    //     "@babel/plugin-proposal-object-rest-spread",
+    //     "@babel/plugin-transform-arrow-functions",
+    //     "@babel/plugin-transform-template-literals"
     // ]
+    "preset":[
+        "@babel/preset-env"
+    ]
 }
