--- a/Lessons/Lesson2/Task1/.babelrc
+++ b/Lessons/Lesson2/Task1/.babelrc
@@ -5,6 +5,12 @@
     //     "@babel/plugin-transform-template-literals"
     // ]
     "preset":[
-        "@babel/preset-env"
+        [
+            "@babel/preset-env",
+            {
+               "targets" : "> 1%" 
+            }
+        ]
+        
     ]
 }
