--- a/Lessons/Lesson3/Task2/package.json
+++ b/Lessons/Lesson3/Task2/package.json
@@ -23,5 +23,8 @@
         "npm": "^6.14.5",
         "run-all": "^1.0.1",
         "sass": "^1.26.9"
+    },
+    "dependencies": {
+        "core-js": "^3.6.5"
     }
 }
