--- a/Lessons/Lesson5/Task1/package.json
+++ b/Lessons/Lesson5/Task1/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "build": "webpack ./src/my-index.js -p",
-        "watch": "webpack ./src/my-index.js -d --devtool eval-source-maps"
+        "watch": "webpack ./src/my-index.js -d --devtool eval-source-maps -w"
     },
     "keywords": [],
     "author": "",
