--- a/Lessons/Lesson6/Task1/package.json
+++ b/Lessons/Lesson6/Task1/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "devDependencies": {
         "css-loader": "^3.6.0",
+        "sass-loader": "^9.0.1",
         "style-loader": "^1.2.1",
         "url-loader": "^4.1.0",
         "webpack": "^4.43.0",
