--- a/Lessons/Lesson6/Task2/package.json
+++ b/Lessons/Lesson6/Task2/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "Task2",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/cli": "^7.10.4",
-    "@babel/core": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
-    "babel-loader": "^8.1.0",
-    "core-js": "^3.6.5",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
-  }
+    "name": "task2",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "build": "webpack -p",
+        "watch": "webpack -d --devtools eval-source-maps -w"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@babel/cli": "^7.10.4",
+        "@babel/core": "^7.10.4",
+        "@babel/preset-env": "^7.10.4",
+        "babel-loader": "^8.1.0",
+        "core-js": "^3.6.5",
+        "webpack": "^4.43.0",
+        "webpack-cli": "^3.3.12"
+    }
 }
