--- a/Lessons/Lesson8/Task1/src/package.json
+++ b/Lessons/Lesson8/Task1/src/package.json
@@ -4,7 +4,7 @@
     "main": "index.js",
     "scripts": {
         "build": "webpack -p",
-        "start": "webpack-dev-server -d --devtools eval-sorce-maps"
+        "start": "webpack-dev-server -d --devtools eval-sorce-maps --open"
     },
     "author": "",
     "license": "ISC",
