--- a/Lessons/Lesson8/Task2/src/package.json
+++ b/Lessons/Lesson8/Task2/src/package.json
@@ -6,11 +6,8 @@
     "scripts": {
         "test": "jest",
         "test:watch": "jest --watch",
-        "copy:html": "cp ./src/index.html ./dist/index.html",
         "build:scripts": "webpack -p",
-        "clean": "rm -rf ./dist",
-        "build": "npm-run-all clean build:*",
-        "watch": "webpack -d --devtools eval-source-maps -w"
+        "start": "webpack -d --devtools eval-source-maps -w"
     },
     "keywords": [],
     "author": "",
