--- a/Lessons/Lesson8/Task2/src/package.json
+++ b/Lessons/Lesson8/Task2/src/package.json
@@ -4,10 +4,10 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "start": "webpack-dev-server -d --devtools eval-source-maps --open",
         "test": "jest",
         "test:watch": "jest --watch",
-        "build:scripts": "webpack -p",
-        "start": "webpack -d --watch --devtools eval-source-maps"
+        "build:scripts": "webpack -p"
     },
     "keywords": [],
     "author": "",
